Enable passing -Djava.endorsed.dirs to surefire plugin for unit test
git-svn-id: https://svn.apache.org/repos/asf/incubator/tuscany/java/sdo@642377 13f79535-47bb-0310-9956-ffa450edef68